<resources>
    <!-- General -->
    <string name="app_name">Target MVD</string>
    <string name="ok">OK</string>
    <string name="facebook_app_id">166925907359293</string>
    <string name="fb_login_protocol_scheme">fb166925907359293</string>

    <string name="mixpanel_api_key">mixpanel_api_key</string>

    <!-- Error Messages -->
    <string name="generic_error">There was an unexpected error</string>
    <string name="unknown_error">Unknown error</string>
    <string name="error">ERROR</string>

    <!-- Sign Up -->
    <string name="name">Name</string>
    <string name="missing_name_error">You forgot to put your name!</string>
    <string name="email">Email</string>
    <string name="missing_email_error">You forgot to put your email!</string>
    <string name="email_not_valid_error">Oops! This email is not valid</string>
    <string name="password">Password</string>
    <string name="password_hint">Min. 8 characters long</string>
    <string name="missing_password_error">You forgot to put your password!</string>
    <string name="short_password_error">Please enter at least 8 characters</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="missing_confirm_password_error">You forgot to confirm your password!</string>
    <string name="confirm_password_match_error">Your password does not match!</string>
    <string name="gender">Gender</string>
    <string name="missing_gender_error">You forgot to select your gender!</string>
    <string name="select_gender">Select gender</string>
    <string-array name="genders">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string name="default_input_validation_error">Please review</string>
    <string name="sign_up">Sign Up</string>

    <!-- Sign In -->
    <string name="sign_in">Sign In</string>
    <string name="connect_with_facebook">Connect with Facebook</string>
    <string name="facebook_login_error">Error trying to login using Facebook. %1$s</string>

    <!-- Profile -->
    <string name="welcome_message">Hi %1$s!</string>
    <string name="sign_out">Sign Out</string>
    <string name="default_error">Oops! Network error</string>
</resources>
